@@ -1,7 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:tal="http://xml.zope.org/namespaces/tal">
-  <body>
-    <div>Your user name for ${system_name} is <em>${login}</em>.</div>
-    <div>Your new password is <em>${password}</em>.</div>
-  </body>
-</html>
